@@ -16,6 +16,7 @@
 		- Cleanup in t3lib_install
 		- Fixed bug #7589: FULLTEXT keys are not processed correctly
 		- Detect differences in table engine and table character set during DB compare
+		- Add character set support to t3lib_install
 	* Fix DB field types for static_tsconfig_help
 
 2008-03-03  Ingo Renner  <ingo@typo3.org>
